--- a/allegro_lammps_hsp_recipe/version.conf
+++ b/allegro_lammps_hsp_recipe/version.conf
@@ -12,4 +12,6 @@ VESIN_VERSION=0.2.0
 NEQUIP_COMMIT=v0.6.1
 ALLEGRO_COMMIT=dea9946adaaa3afe6a946d795c99525d76aa3819
 PAIR_ALLEGRO_COMMIT=6e37b34b0cf1d16d4fdf9b9b2afea27410568a2f
-LAMMPS_VERSION=stable_2Aug2023_update4
+LAMMPS_VERSION=mace-branch
+LAMMPS_REPO=https://github.com/ACEsuit/lammps
+LAMMPS_BRANCH=mace
