--- a/allegro_lammps_hsp_recipe/version.conf
+++ b/allegro_lammps_hsp_recipe/version.conf
@@ -4,14 +4,7 @@ PYTORCH_VERSION=2.3.1+rocm6.0
 PYTORCH_VERSION_SHORT=$(echo "$PYTORCH_VERSION" | cut -d '+' -f 1)
 LIBTORCH_VERSION=2.3.1%2Brocm6.0
 PYTHON_VERSION=3.11
-WANDB_VERSION=0.18.7
 MKL_INCLUDE_VERSION=2024.0.0
-WHEEL_VERSION=0.45.1
-MATSCIPY_VERSION=1.1.1
-VESIN_VERSION=0.2.0
-NEQUIP_COMMIT=v0.6.1
-ALLEGRO_COMMIT=dea9946adaaa3afe6a946d795c99525d76aa3819
-PAIR_ALLEGRO_COMMIT=6e37b34b0cf1d16d4fdf9b9b2afea27410568a2f
-LAMMPS_VERSION=mace-branch
-LAMMPS_REPO=https://github.com/ACEsuit/lammps
-LAMMPS_BRANCH=mace
+LAMMPS_VERSION=develop
+LAMMPS_REPO=https://github.com/lammps/lammps
+LAMMPS_BRANCH=develop
