--- a/allegro_lammps_hsp_recipe/version.conf
+++ b/allegro_lammps_hsp_recipe/version.conf
@@ -4,7 +4,16 @@ PYTORCH_VERSION=2.3.1+rocm6.0
 PYTORCH_VERSION_SHORT=$(echo "$PYTORCH_VERSION" | cut -d '+' -f 1)
 LIBTORCH_VERSION=2.3.1%2Brocm6.0
 PYTHON_VERSION=3.11
+WANDB_VERSION=0.18.7
 MKL_INCLUDE_VERSION=2024.0.0
+WHEEL_VERSION=0.45.1
+MATSCIPY_VERSION=1.1.1
+VESIN_VERSION=0.2.0
+# Updated to use latest versions from PyPI
+NEQUIP_VERSION=0.7.0
+ALLEGRO_VERSION=0.4.0
+# Using latest pair_nequip_allegro from main branch
+PAIR_ALLEGRO_BRANCH=main
+# Using LAMMPS development branch
 LAMMPS_VERSION=develop
-LAMMPS_REPO=https://github.com/lammps/lammps
 LAMMPS_BRANCH=develop
